--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.6.0",
     "ngx-pagination": "^6.0.2",
     "ngx-spinner": "^13.1.1",
+    "pdfmake": "^0.2.5",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
