--- a/angular.json
+++ b/angular.json
@@ -38,8 +38,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "4Mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
