--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^3.3.7",
     "express": "4.18.1",
+    "express-sslify": "^1.2.0",
     "heroku-ssl-redirect": "^0.1.1",
     "jquery": "^3.6.0",
     "ngx-pagination": "^6.0.2",
